--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,16 @@ deploy_staging:
 
 deploy_stable:
   extends: .deploy_stable_v2
+  environment:
+    name: pypi.org
+    url: https://pypi.org/project/sensirion-driver-support-types/
+  before_script:
+    - pip install twine~=1.12.1
+  script:
+    - PKG_VERSION=$(python setup.py --version --quiet | tail -n1)
+    - TAG_VERSION=$(git describe --tags)
+    - if [ "$TAG_VERSION" != "$PKG_VERSION" ]; then echo "Tag Version ($TAG_VERSION) != Package Version ($PKG_VERSION)" && exit 1; fi
+    - twine upload dist/*
 
 # Deploy all files within the "public" directory of the artifacts from the jobs
 # specified as dependencies. Job must be named pages, otherwise gitlab does
